force-app/main/default/objects/Quotation__c/Quotation__c.object-meta.xml
<CustomObject>
    <label>見積</label>
    <nameField>
        <displayFormat>見積No{0000}</displayFormat>
        <label>見積No</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>