force-app/main/default/objects/Quotation__c/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>客先名</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>見積</relationshipLabel>
    <relationshipName>QuotesAndContracts</relationshipName>
    <type>Lookup</type>
</CustomField>