force-app/main/default/objects/Quotation__c/fields/Affiliation__c.field-meta.xml
<CustomField>
    <fullName>Affiliation__c</fullName>
    <label>所属部署</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>営業部</fullName>
            </value>
            <value>
                <fullName>技術部</fullName>
            </value>
            <value>
                <fullName>総務部</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>