force-app/main/default/objects/Quotation__c/fields/EstimateCheck__c.field-meta.xml
<CustomField>
    <fullName>EstimateCheck__c</fullName>
    <formula>CASE( EstimatePhase__c ,
&quot;提出&quot;, IMAGE(&quot;/img/samples/flag_yellow.gif&quot;,&quot;&quot; ) + &quot;　&quot;+ TEXT( TODAY() - FilingDate__c) + &quot;日経過&quot; ,
&quot;契約&quot;, IMAGE(&quot;/img/samples/flag_green.gif&quot;,&quot;&quot; ) + &quot;　契約&quot; ,
IMAGE(&quot;/img/samples/flag_green.gif&quot;,&quot;&quot; ) + &quot;　不成立&quot;
)</formula>
    <label>見積提出チェック</label>
    <type>Text</type>
</CustomField>