force-app/main/default/objects/Quotation__c/fields/EstimatedAmount__c.field-meta.xml
<CustomField>
    <fullName>EstimatedAmount__c</fullName>
    <label>見積金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>