force-app/main/default/objects/Quotation__c/fields/EstimatePhase__c.field-meta.xml
<CustomField>
    <fullName>EstimatePhase__c</fullName>
    <label>見積フェーズ</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>申請中</fullName>
            </value>
            <value>
                <fullName>承認</fullName>
            </value>
            <value>
                <fullName>提出</fullName>
            </value>
            <value>
                <fullName>契約</fullName>
            </value>
            <value>
                <fullName>不成立</fullName>
            </value>
            <value>
                <fullName>否認</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>