force-app/main/default/objects/Quotation__c/fields/EstimateType__c.field-meta.xml
<CustomField>
    <fullName>EstimateType__c</fullName>
    <label>見積種別</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>新規</fullName>
            </value>
            <value>
                <fullName>再見積</fullName>
            </value>
            <value>
                <fullName>追加</fullName>
            </value>
            <value>
                <fullName>パターン</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>