force-app/main/default/objects/Quotation__c/fields/FilingDate__c.field-meta.xml
<CustomField>
    <fullName>FilingDate__c</fullName>
    <label>見積提出日</label>
    <type>Date</type>
</CustomField>