force-app/main/default/objects/Quotation__c/fields/ProjectAccumulated__c.field-meta.xml
<CustomField>
    <fullName>ProjectAccumulated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>案件に計上</label>
    <type>Checkbox</type>
</CustomField>