force-app/main/default/objects/Quotation__c/fields/ProjectId__c.field-meta.xml
<CustomField>
    <fullName>ProjectId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>関連案件</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>見積（β）</relationshipLabel>
    <relationshipName>Quotations</relationshipName>
    <type>Lookup</type>
</CustomField>